--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -88,6 +88,11 @@
             <version>RELEASE</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.validation</groupId>
+            <artifactId>jakarta.validation-api</artifactId>
+            <version>3.0.2</version>
+        </dependency>
     </dependencies>
 
 <build>
